Fixi label from initial link movie

--- a/src/templates/components/public-participation-modal.html
+++ b/src/templates/components/public-participation-modal.html
@@ -33,7 +33,7 @@
 </div>
 <div class="input-text -required">
   <input type="text" class="js-urlVideo" required id="link_video">
-  <label for="link_video">Vídeo de abertura:</label>
+  <label for="link_video">Link do YouTube: </label>
 </div>
 
 <div class="input-select -required">
