add validation in feedback video url

--- a/src/templates/components/feedback-modal.html
+++ b/src/templates/components/feedback-modal.html
@@ -27,8 +27,8 @@
         </div>
     </div>
     <div class="input-text -required">
-        <input class="js-youtubeId" type="text" name="youtube_id" required id="id_youtube">
-        <label for="youtube_id">Link do youtube:</label>
+        <input class="js-youtubeId" type="text" name="youtube_url" required id="id_youtube_url">
+        <label for="youtube_url">Link do youtube:</label>
     </div>
     <button class="app-button -green js-send">Enviar</button>
 </form>
