--- a/src/static/scss/components/_textual-confirmation-screen.scss
+++ b/src/static/scss/components/_textual-confirmation-screen.scss
@@ -1,7 +1,7 @@
-$yes-button-color: #2DA965;
+$yes-button-color: #2CD27E;
 $no-button-color: #D0D0D0;
 .textual-confirmation-screen {
-	margin: 15%;
+	margin: 10%;
 	margin-top: 7%;
 	margin-bottom: 5%;
 	background: #FFFFFF;
@@ -27,19 +27,13 @@ $no-button-color: #D0D0D0;
 			display: flex;
 			align-items: center;
 			justify-content: center;
-			text-align: justify;
-			padding-right: 10%;
-			font-weight: 300;
 		}
 	& > .grid-template-columns > .item > .icon-style {
 			@media screen and (min-width: $bp-medium) {
-				@include icon('textual-confirmation-icon', 17rem, 17rem);
+				@include icon('textual-confirmation-icon', 10rem, 10rem, 90%);
 			}
 		}
-	& > .grid-template-columns > .button-container {
-			margin-right: 10%;
-			margin-top: 5%;
-	}	
+	& > .button-container {}
 	& > .grid-template-columns > .button-container > .button {
 			border: none;
 			color: white;
@@ -48,9 +42,12 @@ $no-button-color: #D0D0D0;
 			text-decoration: none;
 			display: inline-block;
 			font-size: 16px;
+			margin: 1%;
+			margin-right: 0%;
 			float: right;
 			&--yes {
 				@extend .button;
+				margin-right: 0%;
 				background-color: $yes-button-color;
 				&:hover {
 					background-color: $yes-button-color - 20%;
@@ -58,13 +55,13 @@ $no-button-color: #D0D0D0;
 			}
 			&--no {
 				@extend .button;
-				background-color: $no-button-color - 60%;
-				margin-left: 2%;
-				margin-right: 1%;
+				background-color: $no-button-color;
 				&:hover {
-					background-color: #eb6666 - 20%;
+					background-color: $no-button-color - 20%;
 				}
 			}
 		}
-
+	p {
+		text-align: justify;
+	}
 }
