minor fixes to UI

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -74,6 +74,7 @@
 @import 'components/suggestion-metrics';
 @import 'components/datepicker';
 @import 'components/no-result';
+@import 'components/textual-confirmation-screen';
 
 // Vendor
 @import 'vendor/tooltip';
