--- a/src/static/scss/components/_textual-confirmation-screen.scss
+++ b/src/static/scss/components/_textual-confirmation-screen.scss
@@ -1,7 +1,7 @@
 $yes-button-color: #2CD27E;
 $no-button-color: #D0D0D0;
 .textual-confirmation-screen {
-	margin: 10%;
+	margin: 15%;
 	margin-top: 7%;
 	margin-bottom: 5%;
 	background: #FFFFFF;
@@ -27,13 +27,19 @@ $no-button-color: #D0D0D0;
 			display: flex;
 			align-items: center;
 			justify-content: center;
+			text-align: justify;
+			padding-right: 10%;
+			font-weight: 300;
 		}
 	& > .grid-template-columns > .item > .icon-style {
 			@media screen and (min-width: $bp-medium) {
-				@include icon('textual-confirmation-icon', 10rem, 10rem, 90%);
+				@include icon('textual-confirmation-icon', 17rem, 17rem);
 			}
 		}
-	& > .button-container {}
+	& > .grid-template-columns > .button-container {
+			margin-right: 10%;
+			margin-top: 5%;
+	}	
 	& > .grid-template-columns > .button-container > .button {
 			border: none;
 			color: white;
@@ -42,12 +48,9 @@ $no-button-color: #D0D0D0;
 			text-decoration: none;
 			display: inline-block;
 			font-size: 16px;
-			margin: 1%;
-			margin-right: 0%;
 			float: right;
 			&--yes {
 				@extend .button;
-				margin-right: 0%;
 				background-color: $yes-button-color;
 				&:hover {
 					background-color: $yes-button-color - 20%;
@@ -56,12 +59,12 @@ $no-button-color: #D0D0D0;
 			&--no {
 				@extend .button;
 				background-color: $no-button-color;
+				margin-left: 2%;
+				margin-right: 1%;
 				&:hover {
 					background-color: $no-button-color - 20%;
 				}
 			}
 		}
-	p {
-		text-align: justify;
-	}
+
 }
