original, diff and final version of the text available through a switch menu

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -75,6 +75,7 @@
 @import 'components/datepicker';
 @import 'components/no-result';
 @import 'components/textual-confirmation-screen';
+@import 'components/diff';
 
 // Vendor
 @import 'vendor/tooltip';
