--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -177,6 +177,7 @@
 {% include "components/participation-info-modal.html" %}
 {% include "components/feedback-modal.html" %}
 {% include "components/feedback-info-modal.html" %}
+{% include "components/feedback-waiting-modal.html" %}
 {% include "components/save-modal.html" %}
 
 {% endblock content %}
