--- a/src/static/scss/components/_diff.scss
+++ b/src/static/scss/components/_diff.scss
@@ -12,7 +12,23 @@
 	.texto {
 		text-align: justify;
 		font-weight: 400;
-		padding: 2% 10% 2% 10%
+		padding: 2% 10% 2% 10%;
+	}
+	& .texto > .deleted {
+		position: relative;
+		&::after {
+			border-bottom: 0.125em solid rgba(255, 0, 0, 0.5);
+			content: "";
+			left: 0;
+			line-height: 1em;
+			margin-top: calc(0.125em/2);
+			position: absolute;
+			right: 0;
+			top: 50%; 
+		}
+	}
+	& .texto > .added {
+		background-color: #2CD27E;
 	}
 	ul {
 		text-align: center;
@@ -36,7 +52,7 @@
 	    margin: 0 12px;
 	    letter-spacing: 1px;
 	    font-size: 18px;
-	    line-height: 16px;
+	    line-height: 18px;
 	    font-weight: 300;
 	    text-transform: uppercase;
 	    transition: color 0.1s,background-color 0.1s,padding 0.2s ease-in;
@@ -48,7 +64,7 @@
 	    position: absolute;
 	    bottom: 3px;
 	    left: 0;
-	    height: 3px;
+	    height: 5px;
 	    width: 100%;
 	    background-color: #2EAA68;
 	    transform-origin: right top;
