Feature/textual confirmation screen (#222)
* Fixing email url from congrassman to page disclaimer and create page disclaimer

* Adding structure base in information congressman template and add new rederirect public authorization

* Adding unauthorization public participation congressman

* Adding new base template from informations

* minor fixes to UI

* implemented menu with animated underline

* original, diff and final version of the text available through a switch menu

* implemented diff screen between original, modified and final versions of a text

* fixing lint

* fix flake8

--- a/src/static/scss/components/_textual-confirmation-screen.scss
+++ b/src/static/scss/components/_textual-confirmation-screen.scss
@@ -1,4 +1,4 @@
-$yes-button-color: #2DA965;
+$yes-button-color: #2CD27E;
 $no-button-color: #D0D0D0;
 .textual-confirmation-screen {
 	margin: 15%;
@@ -58,11 +58,11 @@ $no-button-color: #D0D0D0;
 			}
 			&--no {
 				@extend .button;
-				background-color: $no-button-color - 60%;
+				background-color: $no-button-color;
 				margin-left: 2%;
 				margin-right: 1%;
 				&:hover {
-					background-color: #eb6666 - 20%;
+					background-color: $no-button-color - 20%;
 				}
 			}
 		}
