Feature/final version (#245)
* fix text and color in dropdown menu if document is closed

* create events and html to show feedbak modal

* add field final version in group

* add info modal before feedback

* add function to set document final version

* add validation in feedback video url

* send feedback authorization email to congressman

* change feedback button when send feedback

* fix flake8

* Feature/textual confirmation screen (#222)

* Fixing email url from congrassman to page disclaimer and create page disclaimer

* Adding structure base in information congressman template and add new rederirect public authorization

* Adding unauthorization public participation congressman

* Adding new base template from informations

* minor fixes to UI

* implemented menu with animated underline

* original, diff and final version of the text available through a switch menu

* implemented diff screen between original, modified and final versions of a text

* fixing lint

* fix flake8

* fix merge errors

* email base template - works on gmail (#223)

* add video inline in document

* create page and views to feedback disclaimer (#224)

* create page and views to feedback disclaimer

* fix flake8

* Refactor/participation status (#244)

* add group status to show InvitedGoroup only to superusers

* add card with pending groups in home

* remove unused code

* fix flake8

--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -76,7 +76,12 @@
               <div class="item -opinions">
                 {{ public_participation.suggestions.count }}
               </div>
+              {% now "Y-m-d" as todays_date %}
+              {% if public_participation.closing_date|date:"Y-m-d" >= todays_date %}
               <div class="item -green">Em andamento</div>
+              {% else %}
+              <div class="item -red">Encerrado</div>
+              {% endif %}
             </div>
           </a>
           {% endif %}
@@ -170,6 +175,9 @@
 {% include "components/validate-modal.html" %}
 {% include "components/public-participation-modal.html" %}
 {% include "components/participation-info-modal.html" %}
+{% include "components/feedback-modal.html" %}
+{% include "components/feedback-info-modal.html" %}
+{% include "components/feedback-waiting-modal.html" %}
 {% include "components/save-modal.html" %}
 
 {% endblock content %}
@@ -211,6 +219,8 @@
 <script src="{% static 'js/components/opinionsMetrics/view.js' %}"></script>
 <script src="{% static 'js/components/textHighlight/view.js' %}"></script>
 <script src="{% static 'js/components/documentOpinionsBody/view.js' %}"></script>
+<script src="{% static 'js/components/feedbackModal/view.js' %}"></script>
+<script src="{% static 'js/components/feedbackModal/controller.js' %}"></script>
 <script src="{% static 'js/pages/opinionsDocument.js' %}"></script>
 {% endif %}
 {% endblock page_js %}
