add label in document owner cards

--- a/src/templates/pages/dashboard.html
+++ b/src/templates/pages/dashboard.html
@@ -52,26 +52,28 @@
         </p>
 
         <div class="footer">
-          <!-- uncomment when feedback status is implemented 
-          {% if not document|has_public_group %}
-          <div class="status -owner">
-            <div class="feedback-status">
-              <img src="{% static 'img/hourglass.svg' %}" alt="">
-              <p class="-onhold">público aguarda resposta 
-              há x dias </p>
-            </div>
-          </div>
-         {% endif %} -->
-
-<!--          uncomment when feedback_sent is implemented
-        {% if not document|feedback_sent %}
-         <div class="status -owner">
-            <div class="feedback-status">
-              <img src="{% static 'img/check.svg' %}" alt="">
-              <p>Resposta enviada </p>
-            </div>
-          </div>
-        {% endif %}  -->
+          {% if document|has_public_group %}
+            {% document_is_open document as is_open %}
+            {% document_closing_date document as end_date %}
+            {% if not is_open %}
+              {% if document|feedback_sent %}
+                <div class="status -owner">
+                  <div class="feedback-status">
+                    <img src="{% static 'img/check.svg' %}" alt="">
+                    <p>Resposta enviada </p>
+                  </div>
+                </div>
+              {% else %}
+                <div class="status -owner">
+                  <div class="feedback-status">
+                    <img src="{% static 'img/hourglass.svg' %}" alt="">
+                    <p class="-onhold">público aguarda resposta há {{ end_date|absolute_days_since }}
+                      dias</p>
+                  </div>
+                </div>
+              {% endif %}
+            {% endif %}
+          {% endif %}
 
           <div class="actions">
             <a href="{% url 'document_editor_analyze' 'editor' document.id %}">Minhas versões</a>
@@ -79,8 +81,6 @@
               <a href="{% url 'document_editor_analyze' 'analysis' document.id %}?group_id={{document|participation_group_id}}">Ver participação</a>
             {% endif %}
           </div>
-
-         
 
         </div>
 
