add group status to waiting feedback and create label in dropdown menu

--- a/src/static/scss/components/_dropdown-menu.scss
+++ b/src/static/scss/components/_dropdown-menu.scss
@@ -401,6 +401,10 @@
     color: $color-red;
   }
 
+  & > .list a > .info > .item.-orange {
+    color: $color-orange;
+  }
+
   & > .list > hr {
     margin: .5rem 0;
 
