changed icon and fixed its size

--- a/src/templates/structure/email-base.html
+++ b/src/templates/structure/email-base.html
@@ -42,12 +42,14 @@
             margin-left: auto;
             margin-right: auto;
             margin-top: 3%;
+            height: auto;
+            width: 15%;
         }
     </style>
 </head>
 <table>
     <tr>
-        <img src="https://edemocracia.camara.leg.br/wikilegis/static/img/date-mail.png">
+        <img src="https://edemocracia.camara.leg.br/wikilegis/static/img/mail.png">
     </tr>
     <tr class="center">
         <h1 class="title">
