--- a/src/templates/emails/participation_request.html
+++ b/src/templates/emails/participation_request.html
@@ -21,5 +21,5 @@ Pedido de participação pública
 {% endblock content %}
 
 {% block button %}
-<a href="http://{{ site_url }}{% url 'authorization' hash %}">ACEITAR O CONVITE</a>
+<a href="http://{{ site_url }}{% url 'information_authorization' hash %}">ACEITAR O CONVITE</a>
 {% endblock button %}
