--- a/src/templates/pages/public_participation_disclaimer.html
+++ b/src/templates/pages/public_participation_disclaimer.html
@@ -27,7 +27,7 @@
 	 			<a href="http://{{ site_url }}{% url 'public-authorization' hash_id %}">SIM</a>
 	 		</div>
 	 		<div class="button--no">
-	 			<a href="http://{{ site_url }}{% url 'unpublic-authorization' hash_id %}">NÃO</a>
+	 			<a href="http://{{ site_url }}{% url 'unpublic-authorization' hash_id %}?updated={{updated}}">NÃO</a>
 	 		</div>
 	 	</div>
   </div>
