Fixing bugs from emails finish participations

--- a/src/templates/structure/email-base.html
+++ b/src/templates/structure/email-base.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <head>
     <style>
         .center {
@@ -49,7 +50,7 @@
 </head>
 <table>
     <tr>
-        <img src="https://edemocracia.camara.leg.br/wikilegis/static/img/mail.png">
+        <img src="{% static 'img/mail.png' %}">
     </tr>
     <tr class="center">
         <h1 class="title">
