--- a/src/templates/emails/participant-participation-closed.html
+++ b/src/templates/emails/participant-participation-closed.html
@@ -6,10 +6,12 @@
 
 {% block content %}
 	<tr class="center">
+	<p>
 		O projeto de participação pública {{ proposal_title }} que você ajudou a escrever foi finalizado. Clique no botão abaixo para conferir como ficou!
+	</p>
 	</tr>
 {% endblock content %}
 
 {% block button %}
-	<a href="#"> Clique aqui para conferir </a>
+	<a href="http://{{site_url}}{% url 'project' id_group slug %}"> Clique aqui para conferir </a>
 {% endblock button %}
