create block image in email base and add in emails template

--- a/src/templates/structure/email-base.html
+++ b/src/templates/structure/email-base.html
@@ -1,4 +1,3 @@
-{% load staticfiles %}
 <head>
     <style>
         .center {
@@ -50,7 +49,8 @@
 </head>
 <table>
     <tr>
-        <img src="{% static 'img/mail.png' %}">
+        {% block img %}
+        {% endblock img %}
     </tr>
     <tr class="center">
         <h1 class="title">
