--- a/src/templates/emails/closed-participation-owner.html
+++ b/src/templates/emails/closed-participation-owner.html
@@ -1,8 +1,14 @@
 {% extends 'structure/email-base.html' %}
+{% load staticfiles %}
 
 {% block title %}
 	A sua consulta pública sobre o proposição legislativa "{{ proposal_title }}" encontra-se encerrada
 {% endblock title %}
+
+
+{% block img %}
+<img src="http://{{ site_url }}{% static 'img/mail.png' %}">
+{% endblock img %}
 
 {% block content %}
 	<tr class="center">
