--- a/src/templates/emails/participant-participation-closed.html
+++ b/src/templates/emails/participant-participation-closed.html
@@ -1,8 +1,13 @@
 {% extends 'structure/email-base.html' %}
+{% load staticfiles %}
 
 {% block title %}
 	O projeto de participação pública que você contribuiu "{{ proposal_title }}" encontra-se encerrado
 {% endblock title %}
+
+{% block img %}
+<img src="http://{{ site_url }}{% static 'img/mail.png' %}">
+{% endblock img %}
 
 {% block content %}
 	<tr class="center">
