--- a/src/templates/emails/participant_invitation.html
+++ b/src/templates/emails/participant_invitation.html
@@ -1,8 +1,13 @@
 {% extends 'structure/email-base.html' %}
+{% load staticfiles %}
 
 {% block title %}
   Você foi convidado para participar de uma proposição
 {% endblock title %}
+
+{% block img %}
+<img src="http://{{ site_url }}{% static 'img/mail.png' %}">
+{% endblock img %}
 
 {% block content %}
   <tr class="center">
