--- a/src/templates/emails/participation_request.html
+++ b/src/templates/emails/participation_request.html
@@ -1,8 +1,13 @@
 {% extends 'structure/email-base.html' %}
+{% load staticfiles %}
 
 {% block title %}
 Pedido de participação pública
 {% endblock title %}
+
+{% block img %}
+<img src="http://{{ site_url }}{% static 'img/mail.png' %}">
+{% endblock img %}
 
 {% block content %}
 {% if updated %}
