fixed minimap/link to statistics/navbar border-bottom

--- a/src/static/scss/components/_info-bar.scss
+++ b/src/static/scss/components/_info-bar.scss
@@ -72,6 +72,14 @@
 
     opacity: .5;
 
+    & > .estatistica {
+      color: $color-brand;
+      font-size: $font-size-mili;
+      &:hover {
+        color: $color-brand - 50%;
+      }
+    }
+
     &.-video {
       position: relative;
 
@@ -122,6 +130,10 @@
 
     & > .facebook {
       @include icon('facebook');
+    }
+
+    & > .statistics {
+      @include icon('triangle-pip-right');
     }
 
     & > .twitter {
