--- a/src/templates/pages/group-analysis.html
+++ b/src/templates/pages/group-analysis.html
@@ -7,6 +7,7 @@
 
 {% block body_classes %}-white -analysis{% endblock %}
 
+{% block navbar_extra_classes %}-non-admin{% endblock %}
 {% block content %}
 
 <main class="document-editor -active js-documentEditor" data-document-id="{{ object.document.id }}">
