create view to create csv with group data

--- a/src/templates/components/document-opinions.html
+++ b/src/templates/components/document-opinions.html
@@ -16,7 +16,7 @@
       <span class="label">{{group|group_votes}} Votos</span>
     </li>
     <li class="app-tag -button">
-      <span class="label"><a href="#">CSV</a></span>
+      <span class="label"><a href="{% url 'download-csv' group.id %}">CSV</a></span>
     </li>
   </ul>
   <header>
