--- a/src/templates/pages/diff.html
+++ b/src/templates/pages/diff.html
@@ -7,7 +7,7 @@
   <h1 class="title"> Diferença entre textos </h1>
   <ul>
     <li class="menu original"><a href="#">ORIGINAL</a></li>
-    <li class="menu diferencas"><a href="#">DIFERENÇAS</a></li>
+    <li class="menu diferencas"><a href="#" class=" active">DIFERENÇAS</a></li>
     <li class="menu final"><a href="#">FINAL</a></li>
   </ul>
 
@@ -66,15 +66,17 @@
   </div>
 
 {% if is_congressman %}
-Esta é a diferença entre os textos, você concorda com isso?
+<div class="congressman-question">
+Esta é a diferença entre os textos, você concorda?
+</div>
     <div class="button">
       <div class="button--yes">
         <a href="http://{{ site_url  }}">SIM</a>
       </div>
       <div class="button--no">
         <a href="http://{{ site_url }}">NÃO</a>
-      </div>
     </div>
+  </div>
 {% endif %}
 </main>
 {% endblock content %}
